--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,11 +7,10 @@
   * {
     @apply border-gray-200;
   }
+  
 }
 :root {
   --radius: 0.625rem;
-  --background: oklch(1 0 0);
-  --foreground: oklch(0.145 0 0);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.145 0 0);
   --popover: oklch(1 0 0);
@@ -61,7 +60,7 @@
   --destructive: oklch(0.704 0.191 22.216);
   --border: oklch(1 0 0 / 10%);
   --input: oklch(1 0 0 / 15%);
-  --ring: oklch(0.556 0 0);
+  --ring: oklch(86.923% 0.00328 15.561);
   --chart-1: oklch(0.488 0.243 264.376);
   --chart-2: oklch(0.696 0.17 162.48);
   --chart-3: oklch(0.769 0.188 70.08);
@@ -79,4 +78,12 @@
 
 /* responsive helpers */
 .container { max-width: 1200px; margin-left: auto; margin-right: auto; }
-body { background: var(--background); color: var(--foreground); }
+
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
